--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.2.24.jre7</version>
+      <version>42.2.9</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
