--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
       <id>production</id>
       <properties>
         <db.url>jdbc:postgresql://127.0.0.1:5432/dreamjob</db.url>
-        <db.username>dreamjob</db.username>
+        <db.username>postgres</db.username>
         <db.password>password</db.password>
         <db.driver>org.postgresql.Driver</db.driver>
       </properties>
